# seqa-rs

./: CLAUDE.md  Cargo.toml  NOTICE  README.md  license_headers.py
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml  publish.yml
seqa_axum/: Cargo.toml
seqa_axum/src/: cache.rs  main.rs
seqa_axum/src/search/: mod.rs  models.rs
seqa_cli/: Cargo.toml
seqa_cli/src/: main.rs
seqa_core/: Cargo.toml
seqa_core/src/: lib.rs  utils.rs
seqa_core/src/api/: bam_search.rs  bigbed_search.rs  bigwig_search.rs  constants.rs  fasta_search.rs  file_search_request.rs  mod.rs  output_format.rs  search.rs  search_options.rs  search_result.rs  tabix_search.rs
seqa_core/src/codecs/: deflate.rs  gzip.rs  mod.rs  zlib.rs
seqa_core/src/codecs/bgzip/: bgzip_block.rs  mod.rs
seqa_core/src/genome/: mod.rs
seqa_core/src/indexes/: bin.rs  bin_util.rs  chunk.rs  chunk_util.rs  constants.rs  index_cache.rs  mod.rs  test_data.rs  virtual_offset.rs
seqa_core/src/indexes/bai/: chr_idx.rs  mod.rs
seqa_core/src/indexes/bigwig/: header.rs  mod.rs  (+3 more)
seqa_core/src/models/: bed.rs  bedgraph.rs  constants.rs  coordinates.rs  cytoband.rs  gene_coordinate.rs  gff.rs  gtf.rs  mod.rs  tabix_header.rs  vcf.rs
seqa_core/src/services/: mod.rs
seqa_core/src/sqlite/: genes.rs  mod.rs
seqa_core/src/stores/: error.rs  mod.rs  store.rs
seqa_core/src/traits/: feature.rs  mod.rs
seqa_core/tests/: bam.rs  bigbed.rs  bigwig.rs  fasta.rs  local.rs  mod.rs  obj_store.rs  read.rs  sqlite.rs  tabix.rs
seqa_lambda/: .env  Cargo.toml  NA12877.EVA.vcf.gz.tbi  README.md
seqa_lambda/src/: http_handler.rs  main.rs
seqa_rocket/src/: main.rs
seqa_rocket/src/search/: mod.rs
soma_cli/: README.md
soma_cli/src/: main.rs
soma_core/: CLAUDE.md  Cargo.toml  README.md
soma_core/src/: lib.rs  utils.rs
soma_core/src/api/: search_options.rs
soma_core/src/stores/: mod.rs
soma_core/tests/: local.rs  obj_store.rs
soma_rocket/: README.md
(+39 files in other folders)
