[package]
name = "seqa_axum"
version = "1.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.44", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
seqa_core = { path = "../seqa_core", features = ["sqlite"] }
rusqlite = "0.37.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.16"
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
