[package]
name = "seqa_lambda"
version = "0.2.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.37.0", features=["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
lambda_http = {  version = "1.0.0", features = ["apigw_http", "concurrency-tokio"] }
seqa_core = { path = "../seqa_core", features = ["sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
object_store = { version = "0.12.4", features = ["aws", "azure", "reqwest", "http", "gcp"] }
serde_json = "1.0.149"

