[package]
name = "soma_core"
version = "2.1.0"
edition = "2024"
description = "Object store support for vcf, bam, fasta, bigwig, bigbed, gff, bed, bedgraph, gtf"
license = "GNU General Public License (GPL)"
repository = "https://github.com/docwarren/soma-rs"
homepage = "https://github.com/docwarren/soma-rs"
documentation = "https://github.com/docwarren/soma-rs"

[features]
default = []
sqlite = []

[dependencies]
tokio = { version ="1.44.2", features = ["full"] }
url = "2.5.4"
serde = { version = "1.0.219", features = ["derive"] }
futures = "0.3.31"
flate2 = "1.1.1"
object_store = { version = "0.12.4", features = ["aws", "azure", "reqwest", "http", "gcp"] }
thiserror = "2.0.16"
rusqlite = "0.37.0"
